add search to header

--- a/src/app/html/partials/blocks/header/header.hbs
+++ b/src/app/html/partials/blocks/header/header.hbs
@@ -31,6 +31,7 @@
           <a class="btn-inline" href="account--login.html">Login</a>
         </div>
         <div class="header-main__actions-item _ml-1">
+          <input class="header-main__search" type="text" placeholder="Search...">
           <a href="search.html" class="btn-icon">
             <svg aria-hidden="true" focusable="false" role="img" width="16" height="16" viewBox="0 0 20 20"
                  fill="none" xmlns="http://www.w3.org/2000/svg">
