upd account--reset-password

--- a/src/app/html/pages/account--reset-password.hbs
+++ b/src/app/html/pages/account--reset-password.hbs
@@ -2,28 +2,8 @@
 
 {{> layout/head page-title="Infinite Selection - Lost Password"}}
 
-<section class="container-center mx-auto">
-  <p class="infinite-text lost-text">
-    Please enter your email address. You will receive a link to create a new password via email.
-  </p>
-
-  <form class="infinite-form lost-form infinite-form-validation" novalidate>
-    <div class="form-group">
-      <label class="label" for="exampleInputEmail">Email Address</label>
-      <input type="email" class="form-control " id="exampleInputEmail" aria-describedby="emailHelp" required>
-      <div class="invalid-feedback">
-        Please enter a valid Email address.
-      </div>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-
-    <button type="submit" class="infinite-button login-button lost-button">Get New Password</button>
-    <a class="form-text align-self-start" href="account--login.html">Log In</a>
-    <a class="form-text align-self-start" href="home.html">&#8592; Back to Infinite Selection</a>
-  </form>
-
-</section>
+{{> blocks/account--reset-password/01_content
+  indent=true
+}}
 
 {{> layout/bottom }}
