--- a/src/app/html/partials/blocks/shared/account-form.hbs
+++ b/src/app/html/partials/blocks/shared/account-form.hbs
@@ -1,4 +1,7 @@
 <div class="form-group">
+  {{#if label}}
+    <label class="label" for="exampleInput{{id}}">{{label}}</label>
+  {{/if}}
   <input type="{{type}}" {{#if name}} name="{{name}}" {{/if}} class="form-control form-field"
          id="exampleInput{{id}}"
          aria-describedby="{{aria}}" placeholder="{{placeholder}}" required>
