--- a/src/app/html/pages/authenticity-guarantee.hbs
+++ b/src/app/html/pages/authenticity-guarantee.hbs
@@ -2,47 +2,15 @@
 
 {{> layout/head page-title="Infinite Selection - Authenticity Guarantee"}}
 {{> blocks/header/header nav-menu=nav.header.authenticity}}
-<main class="page-content__main">
-  <section class="authenticity-container container">
-    <div class="row">
-      <div class="col-12 col-lg-8 col-xl-6 mx-auto">
-        <h1 class="authenticity-title">
-          Authenticity Guarantee
-        </h1>
-        <p class="authenticity-text">
-          We know that verifying authenticity is a must for high-end footwear. When renting from Infinite
-          Selection, you can feel 100% confident that the sneakers you receive are the real thing.
-          Infinite Selection has developed a thorough authentication process to eliminate the possibility
-          of you ever receiving fake sneakers from us.
-        </p>
-        <p class="authenticity-text">
-          Here’s how we crack down on the fakes:
-        </p>
-        <p class="authenticity-text">
-          <span class="text-dark-bold">Purchasing</span> – All of our sneakers are only initially
-          purchased from legitimate retailers such as
-          Footlocker, StockX, and Finish Line, who have their own verification processes and trusted
-          distributors in place already.
-        </p>
-        <p class="authenticity-text">
-          <span class="text-dark-bold">Authentication</span> – Even though we only buy from trusted
-          retailers, we conduct our own in-depth
-          review of every sneaker to confirm its authenticity before sending them to you. We are experts
-          in identifying if sneakers are legit or not—down to the packaging it comes in. We check every
-          sneaker’s construction detail, material, size, and colorway. Through this method, we ensure that
-          every sneaker we send to you is authentic and you never have to worry about fake sneakers
-          ruining your flex.
-        </p>
-      </div>
-    </div>
-  </section>
-  <section class="action">
-    <h2 class="action-text">
-      Same Sneakers, Better Prices
-    </h2>
-    <a href='browse-sneakers.html' class="infinite-button action-link">Rent Now</a>
-    <img class="action-image" src="../assets/images/other/authenticity-action-image.png" alt="Just Do It">
-  </section>
-</main>
+
+{{> blocks/authenticity-guarantee/01_content
+        indent=true
+        title="Authenticity Guarantee"
+        guarantee=true
+        action-text="Same Sneakers, Better Prices"
+        action-href="browse-sneakers.html"
+        action-src="../assets/images/other/authenticity-action-image.png"
+}}
+
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
