--- a/src/app/styles/pages/authenticity-guarantee.scss
+++ b/src/app/styles/pages/authenticity-guarantee.scss
@@ -1,5 +1,8 @@
 .authenticity-container {
   display: flex;
+  max-width: 635px;
+  margin: 0 auto;
+  padding: 0 15px 70px 15px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -8,8 +11,8 @@
 }
 
 .authenticity-title {
-  margin-top: 72px;
-  margin-bottom: 36px;
+  margin-top: 0;
+  margin-bottom: 20px;
   color: #0b0b0b;
   font-weight: 700;
   font-size: 36px;
@@ -18,11 +21,36 @@
 }
 
 .authenticity-text {
+  margin-top: 16px;
   color: #a7a7a7;
   font-size: 14px;
+  align-self: start;
   text-align: justify;
 }
 
-.authenticity-text:last-child {
-  margin-bottom: 72px;
+.text-center {
+  align-self: center;
+}
+
+.regular-list {
+  margin-top: 16px;
+  align-self: start;
+}
+
+@media (max-width: 1300px) {
+  .authenticity-container {
+    max-width: 570px;
+  }
+}
+
+@media (max-width: 768px) {
+  .authenticity-container {
+    max-width: 540px;
+  }
+}
+
+@media (max-width: 576px) {
+  .authenticity-container {
+    max-width: 100%;
+  }
 }
