--- a/src/app/styles/pages/text.scss
+++ b/src/app/styles/pages/text.scss
@@ -157,10 +157,15 @@
 
 .paragraph-privacy {
   display: block;
-  margin: 35px 0;
+  margin-top: 35px;
+  margin-bottom: 35px;
   color: #0b0b0b;
   font-weight: 700;
   text-align: center;
+}
+
+.paragraph-privacy:first-child {
+  margin-top: 19px;
 }
 
 .emptySpace {
