--- a/src/app/styles/shared/page-content.scss
+++ b/src/app/styles/shared/page-content.scss
@@ -1,6 +1,7 @@
 .page-content {
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   &__header,
   &__footer {
@@ -13,5 +14,6 @@
 }
 
 .page-content__indent {
+  width: 100%;
   margin: 70px auto;
 }
