--- a/src/app/html/pages/home.hbs
+++ b/src/app/html/pages/home.hbs
@@ -3,238 +3,7 @@
 {{> layout/head page-title="Infinite Selection"}}
 {{> blocks/header/header page="home" nav-menu=nav.header.home}}
 
-<main class="page-content__main">
-  <section class="container intro-container">
-    <div class="row intro">
-      <div class="col-lg-4 col-xl-5 order-2 order-lg-1">
-        <div class="description-column">
-          <h1 class="description-title">
-            Rent Authentic Sneakers
-          </h1>
-          <p class="description-text">
-            Rent Collectable Sneakers From Top Brands Like Nike, Air Jordan, Adidas and More
-          </p>
-          <a href="browse-sneakers.html" class="infinite-button mx-auto mx-lg-0">Rent Now</a>
-        </div>
-      </div>
-      <div class="col-lg-8 col-xl-7 order-1 order-lg-2 animate-container">
-        <img class="animate leftSneaker" src="../assets/images/intro/leftSneaker.png" alt="leftSneaker">
-        <img class="animate rightSneaker" src="../assets/images/intro/rightSneaker.png" alt="rightSneaker">
-      </div>
-    </div>
-  </section>
-  <section class="container releases-section">
-    <div class="row releases">
-      <div class="col-12 releases-line d-flex justify-content-between">
-        <h3 class="infinite-header">
-          New Releases
-        </h3>
-        <a class="infinite-link-dark" href="browse-sneakers.html">View All</a>
-      </div>
-      <div class="col-12 releases-container">
-        {{#each home.products}}
-          {{>blocks/shared/product-card}}
-        {{/each}}
-      </div>
-    </div>
-  </section>
-  <section class="homepage-authenticity">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-xl-9 mx-auto homepage-authenticity-text-container">
-          <h2 class="homepage-authenticity-text">
-            We Feel You, No One Should Ever Spend Money On Fake Sneakers.
-            Or Have To Spend Hundreds To Rock The Real Ones.
-          </h2>
-          <a href="authenticity-guarantee.html" class="button-white infinite-button">Authenticity
-            Guarantee</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="clean">
-    <h2 class="clean-text">
-      How we clean
-    </h2>
-    <img class="clean-image" src="../assets/images/homepage-section/section-clean.jpg" alt="How we clean">
-    <a href="how-we-clean.html" class="infinite-link mx-auto mx-lg-0">Learn More</a>
-  </section>
-  <section class="action">
-    <h2 class="action-text infinite-title">
-      Same Sneakers, Better Prices
-    </h2>
-    <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
-    <img class="action-image" src="../assets/images/homepage-section/section-action.png" alt="How we clean">
-  </section>
-  <article class="work-cycle">
-    <div class="container">
-      <section class="work-scheme">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="infinite-header text-center mb-4">How it works</h2>
-          </div>
-          <div class="col-md-12 col-lg-4 work-scheme-item">
-            <h4 class="infinite-header-small mb-3">1. Choose your way to rent</h4>
-            <p class="infinite-text text-grey">
-              We offer one-time and unlimited rentals. Our rentals last
-              either 4 or 8 days. Book rentals days or months in advance
-              to suit all your sneaker needs.
-            </p>
-          </div>
-          <div class="col-md-12 col-lg-4 work-scheme-item">
-            <h4 class="infinite-header-small mb-3">2. We ship. You enjoy</h4>
-            <p class="infinite-text text-grey">
-              Choose the sneakers you want to rent and complete checkout.
-              We pack and ship the sneakers to you. Your order will arrive
-              at your door on your rental start date. Enjoy the sneakers for
-              the length of your rental.
-            </p>
-          </div>
-          <div class="col-md-12 col-lg-4 work-scheme-item">
-            <h4 class="infinite-header-small mb-3">3. Repeat</h4>
-            <p class="infinite-text text-grey">
-              Simply return sneakers to us on the due date using the Free return
-              label provided in the return kit and submit another order.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="advantages-container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="infinite-header text-center mt-5 mb-4">
-              Two Ways
-              <span class="subheader-text">
-                                    to Become a Sneakerhead
-                                </span>
-            </h2>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4 advantages-item">
-            <div class="advantages-item-text">
-              <h4 class="infinite-header-small mb-3">
-                Unlimited Rentals
-                <span class="subheader-text-small">
-                                        Price $249/Month
-                                    </span>
-              </h4>
-            </div>
-            <div class="advantages-item-list">
-              <ul class="advantages-list infinite-text text-grey">
-                <li>Rent Any Pair of Sneakers for Free</li>
-                <li>Rent Sneakers For 4 or 8 Days</li>
-                <li>Rent Sneakers On Rotation</li>
-                <li>Free Shipping And Insurance</li>
-              </ul>
-            </div>
-            <div class="advantages-item-action">
-              <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
-              <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
-            </div>
-
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4 advantages-item">
-            <div class="advantages-item-text">
-              <h4 class="infinite-header-small mb-3">
-                One-Time Rental
-                <span class="subheader-text-small">
-                                        Price Starting at $30/Rental
-                                    </span>
-              </h4>
-            </div>
-            <div class="advantages-item-list">
-              <ul class="advantages-list infinite-text text-grey">
-                <li>Reserve SneakersFor Future Plans</li>
-                <li>Rent Sneakers For 4 or 8 Days</li>
-                <li>Book For As Soon As Tommorow Or Months From Now</li>
-                <li>Free Return Shipping</li>
-              </ul>
-            </div>
-            <div class="advantages-item-action">
-              <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
-              <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
-            </div>
-
-          </div>
-
-          <div class="col-md-12 col-lg-4 d-none d-lg-block advantages-item">
-            <img class="advantages-image" src="../assets/images/homepage-section/section-ways.jpg"
-                 alt="Our Advantages">
-          </div>
-        </div>
-      </section>
-
-      <section class="testimonials">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="infinite-header text-center mt-5 mt-xl-0 mb-4">
-              What They Say
-            </h2>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4 testimonials-item">
-            <div class="testimonials-header">
-              <img class="testimonials-image" src="../assets/images/homepage-section/testimonials-1.jpg"
-                   alt="Jessica Johns">
-              <p class="infinite-header-small">
-                Jessica Johns
-                <span class="testimonials-date">
-                                        18 hour ago
-                                    </span>
-              </p>
-            </div>
-            <p class="infinite-text text-grey">
-              Amazing sneakers! Adidas Continental 80 is very well-made.
-              I have rented it for 3 months and very happy. It"s so soft,
-              comfortable and high quality.
-            </p>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4 testimonials-item">
-            <div class="testimonials-header">
-              <img class="testimonials-image" src="../assets/images/homepage-section/testimonials-2.jpg"
-                   alt="Alex Lawsone">
-              <p class="infinite-header-small">
-                Alex Lawsone
-                <span class="testimonials-date">
-                                        13 hour ago
-                                    </span>
-              </p>
-            </div>
-            <p class="infinite-text text-grey">
-              I"m so exited of my rental. Sneakers is comfortable, refreshing,
-              funky, and smart-looking. Thank you for good service!
-            </p>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4 testimonials-item">
-            <div class="testimonials-header">
-              <img class="testimonials-image" src="../assets/images/homepage-section/testimonials-3.jpg"
-                   alt="Ygritte Lesley ">
-              <p class="infinite-header-small">
-                Ygritte Lesley
-                <span class="testimonials-date">
-                                        10 hour ago
-                                    </span>
-              </p>
-            </div>
-            <p class="infinite-text text-grey">
-              Thank you for the quality sneakers and amazing service. I"m satisfied
-              and happy with my rental and will rent again.
-            </p>
-          </div>
-        </div>
-      </section>
-    </div>
-
-  </article>
-  <section class="action-2">
-    <h2 class="infinite-title action-2-text">
-      Become the Sneakerhead You"ve Always Dreamed of
-    </h2>
-    <a href="browse-sneakers.html" class="infinite-button action-2-link">Rent Now</a>
-    <img class="action-2-image" src="../assets/images/homepage-section/section-action-2.png" alt="Lucky You Are!">
-  </section>
-</main>
+{{> blocks/home/01_content }}
 
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
