--- a/src/app/html/pages/ways-to-rent.hbs
+++ b/src/app/html/pages/ways-to-rent.hbs
@@ -3,133 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Ways to Rent"}}
 {{> blocks/header/header nav-menu=nav.header.rent}}
 
-<main class="page-content__main">
-  <section class="rent-banner">
-    <img src="../assets/images/rent/rent-left.png" alt="Rent Image" class="rent-image rent-image-left">
-    <div class="rent-text-container">
-      <h2 class="infinite-title">Unlimited For <span class="roboto">&#36;249</span></h2>
-      <p class="infinite-text rent-middle-text roboto">
-        Rent Any Pair Of Sneakers in Your Size For Free
-      </p>
-      <a href='browse-sneakers.html' class="infinite-button rent-banner-button">Try Now</a>
-    </div>
-    <img src="../assets/images/rent/rent-right.png" alt="Rent Image" class="rent-image rent-image-right">
-  </section>
-  <section class="container rent-works">
-    <h2 class="infinite-header text-center works-title">How it works</h2>
-    <div class="rent-works-item">
-      <h4 class="infinite-header-small works-header text-center ">Choose your way to rent</h4>
-      <p class="infinite-text text-grey mb-0">
-        Browse our growing collection of sneakers and pick the pair that is perfect for what you need. Our
-        rentals last either 4 or 8 days. Book rentals days or months in advance to suit all your sneaker
-        needs.
-      </p>
-    </div>
-    <div class="rent-works-item">
-      <h4 class="infinite-header-small works-header text-center">We ship. You enjoy</h4>
-      <p class="infinite-text text-grey mb-0">
-        Choose the sneakers you want to rent and complete checkout.
-        We pack and ship the sneakers to you. Your order will arrive
-        at your door on your rental start date. Enjoy the sneakers for
-        the length of your rental.
-      </p>
-    </div>
-    <div class="rent-works-item">
-      <h4 class="infinite-header-small works-header text-center">Repeat</h4>
-      <p class="infinite-text text-grey mb-0">
-        Simply return the sneakers to us at a USPS on your rental end date (before 12 p.m.) using the
-        provided pre-paid return label. Then, order your next pair!
-      </p>
-    </div>
-  </section>
-  <section class="container rent-ways">
-    <h3 class="infinite-header grid-title">
-      two ways to rent
-    </h3>
-
-    <div class="table-container">
-      <table class="rent-table">
-        <thead>
-        <tr>
-          <th></th>
-          <th class="table-header-text">
-            One-Time Rentals
-          </th>
-          <th class="table-header-text">
-            Unlimited Rentals
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td class="table-dark-td">Perfect For</td>
-          <td>Events</td>
-          <td>Sneakerheads</td>
-        </tr>
-        <tr>
-          <td class="table-dark-td">Pairs At Home</td>
-          <td>One</td>
-          <td>One</td>
-        </tr>
-        <tr>
-          <td class="table-dark-td">Swaps</td>
-          <td>None</td>
-          <td>Four A Month</td>
-        </tr>
-        <tr>
-          <td class="table-dark-td">Selection</td>
-          <td>Restricted</td>
-          <td>Unrestricted</td>
-        </tr>
-        <tr>
-          <td class="table-dark-td">Pricing</td>
-          <td>
-            <p class="text-dark-medium">Starting At &#36;30/Rental</p>
-            <a href='browse-sneakers.html'
-               class="infinite-button table-button button-white table-button-light">Browse
-              Sneakers</a>
-          </td>
-          <td class=" ">
-            <p class="text-dark-medium">&#36;249/Month</p>
-            <a href='browse-sneakers.html' class="infinite-button table-button">Try Now</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
-  <section class="container rent-perks">
-    <h3 class="infinite-header grid-title">
-      Perks of unlimited
-    </h3>
-    <img class="infinite-image rent-perks-image" src="../assets/images/rent/sneakers-rent-perks.png" alt="sneakers">
-    <ul class="regular-list text-capitalize rent-list">
-      <li class="list-item">Rent any pair of sneakers for free</li>
-      <li class="list-item">Rent sneaker on rotation</li>
-      <li class="list-item">free shipping</li>
-      <li class="list-item">free insurance</li>
-      <li class="list-item"> free cleaning</li>
-    </ul>
-  </section>
-  <section class="container rent-exclusives">
-    <h3 class="infinite-header">
-      Unlimited Exclusives
-    </h3>
-    <div class="col-12 releases-container">
-      {{#each product-single.products}}
-        {{>blocks/shared/product-card}}
-      {{/each}}
-    </div>
-    <a href='browse-sneakers.html' class="infinite-button action-link">Unlimited Rentals</a>
-  </section>
-  <section class="rent-action">
-    <h2 class="infinite-title">
-      Afraid Of Commitment
-      <span class="infinite-text rent-middle-text roboto">Start With A One-Time Rental</span>
-    </h2>
-    <a href='browse-sneakers.html' class="infinite-button action-link">Browse Sneakers</a>
-  </section>
-</main>
+{{> blocks/ways-to-rent/01_content ways-to-rent=true}}
 
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
