--- a/src/app/styles/pages/example.scss
+++ b/src/app/styles/pages/example.scss
@@ -2,17 +2,56 @@
   text-align: center;
 }
 
-#carouselExampleIndicators {
+.carousel {
+  position: relative;
   max-width: 600px;
   margin: 0 auto;
 }
 
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  margin-right: 15%;
+  margin-bottom: 16px;
+  margin-left: 15%;
+  z-index: 15;
+  justify-content: center;
+}
+
 .carousel-indicators li {
+  flex: 0 1 auto;
+  width: 30px;
+  height: 3px;
   margin-right: 0;
   margin-left: 0;
+  cursor: pointer;
   background-color: #0b0b0b;
   opacity: 0.1;
   transition: all 0.1s ease;
+}
+
+.carousel-indicators li.active {
+  opacity: 1;
+}
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-inner::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.carousel-img {
+  display: block;
+  width: 100%;
 }
 
 .carousel-control-prev-icon,
@@ -22,7 +61,22 @@
 
 .carousel-control-next,
 .carousel-control-prev {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
   width: 35%;
+  align-items: center;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+
+.carousel-control-prev {
+  left: 0;
+}
+
+.carousel-control-next {
+  right: 0;
 }
 
 .description-line {
@@ -63,6 +117,8 @@
   justify-content: center;
   max-width: 610px;
   margin: 0 auto;
+  column-gap: 20px;
+  row-gap: 16px;
 }
 
 .description-meta-item {
@@ -73,32 +129,12 @@
   text-align: justify;
 }
 
-.description-meta-item:nth-child(1),
-.description-meta-item:nth-child(3) {
-  margin-right: 20px;
-}
-
 .condition-text-main {
   display: block;
 }
 
-.example-releases {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 @media screen and (max-width: 668px) {
-  .example-releases .infinite-header {
-    font-size: 22px;
-  }
-
   .description-meta {
     max-width: 449px;
-  }
-
-  .description-meta-item:nth-child(1),
-  .description-meta-item:nth-child(3) {
-    margin-right: 0;
   }
 }
