--- a/src/app/styles/pages/ways-to-rent.scss
+++ b/src/app/styles/pages/ways-to-rent.scss
@@ -158,6 +158,7 @@
   grid-template-columns: minmax(320px, 1fr);
   align-content: center;
   justify-content: center;
+  padding: 0 15px;
 }
 
 .table-container {
@@ -169,6 +170,7 @@
 .rent-table {
   width: 100%;
   text-align: center;
+  border-collapse: collapse;
 }
 
 td,
@@ -199,8 +201,9 @@ td {
   background-color: rgba(227, 227, 227, 0.2);
 }
 
+
 .table-button {
-  margin: 0 auto;
+  margin: 16px auto 0 auto;
 }
 
 .table-button-light {
@@ -259,6 +262,7 @@ td {
 }
 
 .rent-list {
+  margin: auto 0;
   display: flex;
   flex-direction: column;
   grid-row: 2 / 3;
@@ -271,6 +275,7 @@ td {
 
 .rent-list li {
   margin: 5px 0;
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 700px) {
@@ -316,6 +321,11 @@ td {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 0 75px 0;
+  padding: 0 15px 75px 15px;
   text-align: center;
+
+  .releases-image {
+    max-width: 150px;
+    height: 140px;
+  }
 }
