--- a/src/app/html/partials/blocks/home/01_content.hbs
+++ b/src/app/html/partials/blocks/home/01_content.hbs
@@ -50,7 +50,37 @@
     action-src="../assets/images/homepage-section/section-action.png"
   }}
   <div class="work-cycle">
-    {{> blocks/shared/how-it-works ways-to-rent=false home=true}}
+    <section class="container works">
+      <h2 class="infinite-header text-center works-main-title">
+        How It Works
+      </h2>
+      <div class="works-items">
+        <div class="works-item">
+          <h4 class="infinite-header-small works-header">
+            1. Choose your way to rent
+          </h4>
+          <p class="infinite-text text-grey">
+            We offer one-time and unlimited rentals. Our rentals last either 4 or 8 days. Book rentals days or months in advance to suit all your sneaker needs.
+          </p>
+        </div>
+        <div class="works-item">
+          <h4 class="infinite-header-small works-header">
+            2. We Ship. You Enjoy
+          </h4>
+          <p class="infinite-text text-grey">
+            Choose the sneakers you want to rent and complete checkout. We pack and ship the sneakers to you. Your order will arrive at your door on your rental start date. Enjoy the sneakers for the length of your rental.
+          </p>
+        </div>
+        <div class="works-item">
+          <h4 class="infinite-header-small works-header">
+            3. Repeat
+          </h4>
+          <p class="infinite-text text-grey">
+            Simply return sneakers to us on the due date using the Free return label provided in the return kit and submit another order.
+          </p>
+        </div>
+      </div>
+    </section>
     <section class="container works">
       <h2 class="infinite-header text-center works-main-title">
         Two Ways
