--- a/src/app/html/pages/faq.hbs
+++ b/src/app/html/pages/faq.hbs
@@ -2,146 +2,8 @@
 
 {{> layout/head page-title="Infinite Selection - F.A.Q."}}
 
-<header class="faq-header">
-  <div class="container faq-container">
-    <div class="faq-top-line">
-      <h2 class="faq-title">
-        FAQ's
-      </h2>
-      <a href='home.html' class="faq-header-link">
-        <svg class="faq-header-icon" width="14" height="14" viewBox="0 0 14 14"
-             xmlns="http://www.w3.org/2000/svg">
-          <title>Group 65</title>
-          <g stroke="#fff" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M11.5 6.73v6.77H.5v-11h7.615M4.5 9.5l7-7M13.5 5.5v-5h-5"></path>
-          </g>
-        </svg>
-        <span>Go to Infinite Selection</span>
-      </a>
-    </div>
-    <h1 class="faq-headline">Find the answers to our most common questions.</h1>
-    <form action="echo" autocomplete="off" class="faq-form ">
-      <input type="text" autocomplete="off" class="faq-search" placeholder="Search for articles..."
-             name="faq">
-    </form>
-  </div>
-
-</header>
-<main class="faq-main">
-  <div class="container faq-content-container">
-    <div class="faq-item">
-      <a href="#" class="faq-item-link">
-        <svg class="faq-item-icon" role="img" viewBox="0 0 48 48">
-          <g id="devices-mobile" fill="none" fill-rule="evenodd">
-            <path
-              d="M39 43a4 4 0 0 1-4 4H13a4 4 0 0 1-4-4V5a4 4 0 0 1 4-4h22a4 4 0 0 1 4 4v38zm0-34H9m30 30H9"
-              stroke-width="2" stroke-linecap="round"></path>
-            <path d="M24 41a2 2 0 1 0 0 4 2 2 0 0 0 0-4" fill="#231F1F"></path>
-            <path d="M19 5h10" stroke-width="2" stroke-linecap="round"></path>
-          </g>
-        </svg>
-        <div class="faq-item-meta">
-          <h3 class="meta-heading">Getting Started</h3>
-          <div class="meta-content">
-            <img class="faq-avatar" src="../assets/images/other/faq-avatar.jpeg" alt="Avatar">
-            <p class="meta-content-text">
-              26 articles in this collection <br>
-              <span class="faq-text-grey">Written by</span>
-              Infinite Selection
-            </p>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="faq-item">
-      <a href="#" class="faq-item-link">
-        <svg class="faq-item-icon" role="img" viewBox="0 0 48 48">
-          <g id="info-check" stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round"
-             stroke-linejoin="round">
-            <path d="M34.002 17l-15 14-5-5"></path>
-            <path
-              d="M47.002 24c0 12.703-10.3 23-23 23-12.706 0-23-10.297-23-23s10.294-23 23-23c12.7 0 23 10.297 23 23z">
-            </path>
-          </g>
-        </svg>
-        <div class="faq-item-meta">
-          <h3 class="meta-heading">Condition and Fit</h3>
-          <div class="meta-content">
-            <img class="faq-avatar" src="../assets/images/other/faq-avatar.jpeg" alt="Avatar">
-            <p class="meta-content-text">
-              5 articles in this collection <br>
-              <span class="faq-text-grey">Written by</span>
-              Infinite Selection
-            </p>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="faq-item">
-      <a href="#" class="faq-item-link">
-        <svg class="faq-item-icon" role="img" viewBox="0 0 48 48">
-          <g id="biz-package" stroke-width="2" fill="none" fill-rule="evenodd" stroke-linejoin="round">
-            <path d="M24 21L1 11v26l23 10V21zm0 0l23-10v26L24 47V21zM1 11L24 1l23 10"
-                  stroke-linecap="round"></path>
-            <path d="M14.333 5.167l20.885 10.896"></path>
-            <path d="M18 25L7 20v10l11 5V25z" stroke-linecap="round"></path>
-          </g>
-        </svg>
-        <div class="faq-item-meta">
-          <h3 class="meta-heading">My Order</h3>
-          <div class="meta-content">
-            <img class="faq-avatar" src="../assets/images/other/faq-avatar.jpeg" alt="Avatar">
-            <p class="meta-content-text">
-              13 articles in this collection <br>
-              <span class="faq-text-grey">Written by</span>
-              Infinite Selection
-            </p>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-</main>
-<footer class="faq-footer">
-  <div class="container faq-container faq-footer-container">
-    <h2 class="faq-title">FAQ</h2>
-
-    <ul class="faq-list">
-      <li class="faq-list-item">
-        <a href='browse-sneakers.html' class="faq-list-link">Browse Sneakers</a>
-      </li>
-      <li class="faq-list-item">
-        <a href='how-we-clean.html' class="faq-list-link">How We Clean</a>
-      </li>
-      <li class="faq-list-item">
-        <a href='ways-to-rent.html' class="faq-list-link">Ways to Rent</a>
-      </li>
-      <li class="faq-list-item">
-        <a href='authenticity-guarantee.html' class="faq-list-link">Authenticity Guarantee</a>
-      </li>
-    </ul>
-
-    <ul class="faq-socials">
-      <li class="faq-socials-item">
-        <a class="faq-social-link facebook-link" href="https://www.facebook.com" target="_blank"
-           rel="noopener noreferrer">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-      </li>
-      <li class="faq-socials-item">
-        <a class="faq-social-link instagram-link" href="https://www.instagram.com" target="_blank"
-           rel="noopener noreferrer">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-      <li class="faq-socials-item">
-        <a class="faq-social-link twitter-link" href="https://twitter.com" target="_blank"
-           rel="noopener noreferrer">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
+{{> blocks/faq/header}}
+{{> blocks/faq/01_content}}
+{{> blocks/faq/footer}}
 
 {{> layout/bottom }}
