upd how-we-clean

--- a/src/app/html/pages/how-we-clean.hbs
+++ b/src/app/html/pages/how-we-clean.hbs
@@ -3,103 +3,7 @@
 {{> layout/head page-title="Infinite Selection - How We Clean"}}
 {{> blocks/header/header nav-menu=nav.header.clean}}
 
-<main class="page-content__main">
-  <article class="container cleaning">
-    <section class="row cleaning-banner">
-      <div class="col-12 ">
-        <h1 class="infinite-title cleaning-title text-center">
-          How We clean
-        </h1>
-
-        <p class="cleaning-subtitle-text text-center">
-          We scrub every inch both Inside and Out
-        </p>
-
-        <iframe src="https://player.vimeo.com/video/345594861" class="cleaning-video" frameborder="0"
-                allowfullscreen="allowfullscreen"></iframe>
-      </div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-12 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          01 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Scrubbing the shoes</h4>
-        <p class="infinite-text text-grey mb-0">
-          We scrub every inch of these shoes so they come out spotless and looking like new.
-        </p>
-      </div>
-      <div class="col-12 cleaning-image"></div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-12 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          02 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Rinsing the Laces</h4>
-        <p class="infinite-text text-grey mb-0">
-          Each shoelace is rinsed clean with our solution.
-        </p>
-      </div>
-      <div class="col-12 cleaning-image cleaning-image-2"></div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-10 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          03 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Washing the Insoles</h4>
-        <p class="infinite-text text-grey mb-0">
-          We wash the insoles to ensure they look and feel fresh.
-        </p>
-      </div>
-      <div class="col-12 cleaning-image cleaning-image-3"></div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-12 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          04 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Lint Removal</h4>
-        <p class="infinite-text text-grey mb-0">
-          Lint is removed for a crisp inner lining.
-        </p>
-      </div>
-      <div class="col-12 cleaning-image cleaning-image-4"></div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-12 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          05 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Smoothing the Creases</h4>
-        <p class="infinite-text text-grey mb-0">
-          We carefully smooth out creases to make the shoes look like new.
-        </p>
-      </div>
-      <div class="col-12 cleaning-image cleaning-image-5"></div>
-    </section>
-
-    <section class="row cleaning-container">
-      <div class="col-12 col-sm-8 cleaning-text-container">
-        <p class="infinite-text cleaning-step">
-          06 / 06
-        </p>
-        <h4 class="infinite-header cleaning-header">Grading the Sneakers</h4>
-        <p class="infinite-text text-grey mb-0">
-          Our team of trained specialists assesses each pair of GOAT Clean shoes and assigns scores
-          to specific areas. The scores are then combined for an overall grade.
-        </p>
-      </div>
-    </section>
-
-  </article>
-</main>
+{{> blocks/how-we-clean/01_content }}
 
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
