--- a/src/app/html/partials/blocks/ways-to-rent/01_content.hbs
+++ b/src/app/html/partials/blocks/ways-to-rent/01_content.hbs
@@ -11,7 +11,39 @@
     <img src="../assets/images/rent/rent-right.png" alt="Rent Image" class="rent-image rent-image-right">
   </section>
 
-  {{> blocks/shared/how-it-works ways-to-rent=true home=false}}
+  <section class="container rent-works">
+    <h2 class="infinite-header text-center works-title">How it works</h2>
+    <div class="rent-works-item">
+      <h4 class="infinite-header-small works-header text-center">
+        Choose your way to rent
+      </h4>
+      <p class="infinite-text text-grey">
+        Browse our growing collection of sneakers and pick the pair that is perfect for what you need. Our
+        rentals last either 4 or 8 days. Book rentals days or months in advance to suit all your sneaker
+        needs.
+      </p>
+    </div>
+    <div class="rent-works-item">
+      <h4 class="infinite-header-small works-header text-center">
+        We ship. You enjoy
+      </h4>
+      <p class="infinite-text text-grey">
+        Choose the sneakers you want to rent and complete checkout.
+        We pack and ship the sneakers to you. Your order will arrive
+        at your door on your rental start date. Enjoy the sneakers for
+        the length of your rental.
+      </p>
+    </div>
+    <div class="rent-works-item">
+      <h4 class="infinite-header-small works-header text-center">
+        Repeat
+      </h4>
+      <p class="infinite-text text-grey">
+        Simply return the sneakers to us at a USPS on your rental end date (before 12 p.m.) using the
+        provided pre-paid return label. Then, order your next pair!
+      </p>
+    </div>
+  </section>
 
   <section class="container rent-ways">
     <h3 class="infinite-header grid-title">
