--- a/src/app/styles/layout/header.scss
+++ b/src/app/styles/layout/header.scss
@@ -48,7 +48,7 @@
     @include flex-gap(10px);
   }
 
-  &__actions-item:nth-child(2) {
+  .header-search {
     display: flex;
   }
 
@@ -61,32 +61,114 @@
     transition: all 0.8s ease-in-out;
   }
 
-  &__actions-item:nth-child(2):hover {
-    position: relative;
-    height: 32px;
-    border: 1px solid #e3e3e3;
-    border-radius: 30px;
+  .header-search__opened {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 25px;
+    z-index: 10001;
+    background-color: #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  }
 
-    .btn-icon {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 3;
-      background-color: $color-white;
-      border-radius: 30px;
+  .header-search.open {
+    .header-search__opened {
+      display: block;
     }
+  }
 
+  .header-search__inner {
+    padding: 10px 50px;
+  }
 
-    .header-main__search {
-      max-width: 170px;
-      padding: 0 10px;
-      caret-color: #ff0000;
-      color: $color-white;
-      background-color: #000000;
-      border-radius: 30px;
-      transition: all 0.8s ease-in-out;
-    }
+  .header-search__header {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-search__field {
+    width: 100%;
+  }
+
+  .header-search__input {
+    display: block;
+    width: 100%;
+    height: auto;
+    font-size: 20px;
+    text-align: start;
+    font-family: Playfair Display, serif;
+  }
+
+  .search-input::-ms-clear {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
+  .header-search__close {
+    position: absolute;
+    top: 30px;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    transform: translateY(-50%);
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+  }
+
+  .icon-close {
+    width: 100%;
+    height: 100%;
+  }
+
+  .icon-close::after,
+  .icon-close::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    content: "";
+    display: block;
+    width: 14px;
+    height: 1.5px;
+    background-color: #7e7e7e;
+  }
+
+  .icon-close::before {
+    transform: translate(-50%, -50%) rotate(-45deg);
+  }
+
+  .icon-close::after {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  .header-search__results {
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3s ease;
+  }
+
+  .header-search__results.visible {
+    max-height: 700px;
+    margin-top: 10px;
+  }
+
+  .header-search__results-item {
+    padding: 6px 12px;
+  }
+
+  .header-search__results-link {
+    font-size: 18px;
+    line-height: 1.2;
+    color: #7e7e7e;
+    font-family: Playfair Display, serif;
+  }
+
+  .header-search__results-link:hover {
+    color: #000000;
   }
 
   &__actions-item:last-child {
