rename classes toggle-menu (BEM)

--- a/src/app/html/partials/blocks/header/header.hbs
+++ b/src/app/html/partials/blocks/header/header.hbs
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="header-main__content">
       <div class="header-main__toggle toggle-menu">
-        <button class="mobile-menu__btn js-mobile-menu" type="button">
-          <img src="../assets/images/logo/mobile-menu-icon.svg" class="mobile-menu__icon" alt="Mobile menu icon" />
-          <img src="../assets/images/logo/mobile-menu-icon-close.svg" class="mobile-menu__icon_close" alt="Mobile menu
+        <button class="toggle-menu__btn js-mobile-menu" type="button">
+          <img src="../assets/images/logo/mobile-menu-icon.svg" class="toggle-menu__open" alt="Mobile menu icon" />
+          <img src="../assets/images/logo/mobile-menu-icon-close.svg" class="toggle-menu__close" alt="Mobile menu
           icon" />
         </button>
       </div>
